install_headers(
	[
		'boxfield.hpp',
		'boxfield.h',
                'cylinderfield.hpp',
		'field.hpp',
		'field.h',
		'roundedboxfield.hpp',
		'spherefield.hpp',
	],
	subdir: 'stardustxr/fusion/types/fields'
)

fusion_files += files(
	'boxfield.cpp',
        'cylinderfield.cpp',
	'field.cpp',
	'roundedboxfield.cpp',
	'spherefield.cpp',
)
